--- a/Aula03/aula03.html
+++ b/Aula03/aula03.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
     <h1>justify-content</h1>
 
     <div>
@@ -38,5 +41,6 @@
         <div class="item">4</div>
       </section>
     </div>
-</body>
+  </body>
+
 </html>
