--- a/Aula04-Exercicio/aula04.html
+++ b/Aula04-Exercicio/aula04.html
@@ -10,7 +10,7 @@
 
   <body>
     <section class="grid grid-template-1 stretch gap">
-      <div class="item logo"><img class="logoGato" src="logo_gato.png" alt="Logo Gato" srcset=""></div>
+      <div class="item logo"><img class="logoGato" src="./Gatos/logo_gato.png" alt="Logo Gato" srcset=""></div>
       <div class="item nav">
         <div class=" menu">
           <div>Produtos</div>
@@ -24,19 +24,19 @@
 
         <div>
           <div class="gallery">
-            <img class="gatos" src="gato1.jpeg" alt="">
+            <img class="gatos" src="./Gatos/gato1.jpeg" alt="">
             <label for="">Gato A</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato1.jpeg" alt="">
+            <img class="gatos" src="./Gatos/gato2.jpeg" alt="">
             <label for="">Gato B</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato1.jpeg" alt="">
+            <img class="gatos" src="./Gatos/gato3.jpeg" alt="">
             <label for="">Gato C</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato1.jpeg" alt="">
+            <img class="gatos" src="./Gatos/gato4.jpeg" alt="">
             <label for="">Gato D</label>
           </div>
         </div>
@@ -45,19 +45,19 @@
 
 
           <div class="gallery">
-            <img class="gatos" src="gato.jpg" alt="">
+            <img class="gatos" src="./Gatos/gato.jpg" alt="">
             <label for="">Gato E</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato5-1.jpg" alt="">
+            <img class="gatos" src="./Gatos/gato5-1.jpg" alt="">
             <label for="">Gato F</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato6.jpg" alt="">
+            <img class="gatos" src="./Gatos/gato6.jpg" alt="">
             <label for="">Gato G</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="gato7.jpg" alt="">
+            <img class="gatos" src="./Gatos/gato7.jpg" alt="">
             <label for="">Gato H</label>
           </div>
         </div>
